@@ -1,0 +1,3 @@
+Cross-Platform 'zip' Compression Library. A replacement for the 'zip'
+function, that does not require any additional external tools on any
+platform.
