@@ -1,0 +1,16 @@
+# $NetBSD: Makefile,v 1.1 2019/07/30 22:26:11 brook Exp $
+
+CATEGORIES=	archivers R
+
+MAINTAINER=	pkgsrc-users@NetBSD.org
+HOMEPAGE=	${R_HOMEPAGE_BASE}/zip/
+COMMENT=	Cross-platform 'zip' compression
+LICENSE=	cc0-1.0-universal
+
+R_PKGNAME=	zip
+R_PKGVER=	2.0.3
+
+USE_LANGUAGES=	c
+
+.include "../../math/R/Makefile.extension"
+.include "../../mk/bsd.pkg.mk"
