@@ -1,0 +1,6 @@
+$NetBSD: distinfo,v 1.1 2019/07/30 22:26:11 brook Exp $
+
+SHA1 (R/zip_2.0.3.tar.gz) = ce8568b8f10c6908208d7358ca5f15a8ab6dbb2e
+RMD160 (R/zip_2.0.3.tar.gz) = 30276765c2e799207346841249277ca9f237cbd2
+SHA512 (R/zip_2.0.3.tar.gz) = a7ccb26b9c9ade2f9ffbdf2dcd5e37cde4a6364b3882e01ab62ae85a4f2a62532537b6681225edeac7647284eed2650a698fbf0158761912c59c4c35e03482d6
+Size (R/zip_2.0.3.tar.gz) = 96348 bytes
